--- a/index.html
+++ b/index.html
@@ -113,28 +113,26 @@
         }
       }
     </script>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@18.3.1?dev",
-    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime?dev",
-    "react-dom": "https://esm.sh/react-dom@18.3.1?dev&external=react",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client?dev&external=react",
-    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
-    "date-fns": "https://esm.sh/date-fns@4.1.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
-    "antd": "https://esm.sh/antd@5.22.2?bundle&external=react,react-dom",
-    "@ant-design/colors": "https://esm.sh/@ant-design/colors@7.1.0",
-    "@ant-design/icons": "https://esm.sh/@ant-design/icons@5.4.0?external=react,react-dom",
-    "dayjs": "https://esm.sh/dayjs@1.11.10",
-    "dayjs/": "https://esm.sh/dayjs@1.11.10/",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
+    "date-fns": "https://esm.sh/date-fns@^4.1.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "antd": "https://esm.sh/antd@^6.1.3",
+    "dayjs": "https://esm.sh/dayjs@^1.11.19",
+    "dayjs/": "https://esm.sh/dayjs@^1.11.19/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
