--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
         50% { transform: rotate(3deg); }
       }
 
+      @keyframes sparkle {
+        0%, 100% { 
+          transform: scale(1); 
+          filter: brightness(1); 
+        }
+        50% { 
+          transform: scale(1.05); 
+          filter: brightness(1.2) drop-shadow(0 0 10px rgba(244, 63, 94, 0.4)); 
+        }
+      }
+
       .animate-fade-in-up {
         animation: fadeInUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
         opacity: 0; /* Hidden initially */
@@ -80,6 +91,10 @@
       
       .animate-wiggle-hover:hover {
         animation: wiggle 0.5s ease-in-out infinite;
+      }
+
+      .animate-sparkle-hover:hover {
+        animation: sparkle 1s ease-in-out infinite;
       }
 
       /* Washi Tape Effect */
@@ -116,17 +131,17 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
     "date-fns": "https://esm.sh/date-fns@^4.1.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "antd": "https://esm.sh/antd@^6.1.3",
-    "dayjs": "https://esm.sh/dayjs@^1.11.19",
     "dayjs/": "https://esm.sh/dayjs@^1.11.19/",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "dayjs": "https://esm.sh/dayjs@^1.11.19"
   }
 }
 </script>
