--- a/index.html
+++ b/index.html
@@ -131,17 +131,18 @@
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
-    "date-fns": "https://esm.sh/date-fns@^4.1.0",
-    "antd": "https://esm.sh/antd@^6.1.3",
-    "dayjs/": "https://esm.sh/dayjs@^1.11.19/",
-    "dayjs": "https://esm.sh/dayjs@^1.11.19"
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+    "vite": "https://esm.sh/vite@5.4.0",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react": "https://esm.sh/react@18.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@4.3.0",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0",
+    "date-fns": "https://esm.sh/date-fns@4.1.0",
+    "antd": "https://esm.sh/antd@5.22.2?bundle",
+    "dayjs/": "https://esm.sh/dayjs@1.11.10/",
+    "dayjs": "https://esm.sh/dayjs@1.11.10"
   }
 }
 </script>
