fix: Update dependencies and refine date handling
Updates Vite and React plugin versions in importmap.
Removes `parseISO` from date-fns in `TreeTimeline.tsx` to avoid errors, utilizing the native `Date` constructor instead for ISO strings.
Introduces a `sortOrder` prop to `TreeTimeline` and implements dynamic date sorting based on this prop.
Applies the new `sortOrder` prop in `App.tsx`.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       .animate-fade-in-up {
         animation: fadeInUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-        opacity: 0; /* Hidden initially */
+        opacity: 0;
       }
 
       .animate-float {
@@ -131,18 +131,19 @@
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
-    "vite": "https://esm.sh/vite@5.4.0",
-    "react/": "https://esm.sh/react@18.3.1/",
     "react": "https://esm.sh/react@18.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@4.3.0",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react/": "https://esm.sh/react@18.3.1/",
     "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0",
-    "date-fns": "https://esm.sh/date-fns@4.1.0",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "antd": "https://esm.sh/antd@5.22.2?bundle",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+    "date-fns": "https://esm.sh/date-fns@4.1.0",
+    "dayjs": "https://esm.sh/dayjs@1.11.10",
     "dayjs/": "https://esm.sh/dayjs@1.11.10/",
-    "dayjs": "https://esm.sh/dayjs@1.11.10"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
