--- a/index.html
+++ b/index.html
@@ -80,6 +80,27 @@
         }
       }
 
+      /* Hiệu ứng bóng bay bay chéo */
+      @keyframes balloon-float {
+        0% {
+          transform: translate(0, 0) rotate(0deg);
+          opacity: 0;
+        }
+        10% {
+          opacity: 0.7;
+        }
+        50% {
+          transform: translate(50vw, -50vh) rotate(15deg);
+        }
+        90% {
+          opacity: 0.7;
+        }
+        100% {
+          transform: translate(110vw, -110vh) rotate(30deg);
+          opacity: 0;
+        }
+      }
+
       .animate-fade-in-up {
         animation: fadeInUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
         opacity: 0;
@@ -95,6 +116,10 @@
 
       .animate-sparkle-hover:hover {
         animation: sparkle 1s ease-in-out infinite;
+      }
+
+      .animate-balloon {
+        animation: balloon-float 25s linear infinite;
       }
 
       /* Washi Tape Effect */
